Add PivotSearchService to simplify pivot search execution and refactor InputDiagnosticService to use it